--- a/publication.html
+++ b/publication.html
@@ -1,17 +1,18 @@
 ---
 title: Contact
-heading: Feel free to contact us.
+heading: Get in touch today
+subtitle: We'd love to help your business.
 map:
-  latitude: -33.917347
-  longitude: 151.2312675
-  address: "K17, CSE, UNSW, Sydney, NSW 2052, Australia  "
-  zoom: 15
+  latitude: -45.8787605
+  longitude: 170.5027976
+  address: "1 George Street, Dunedin, New Zealand"
+  zoom: 13
 ---
 
 <section class="diagonal">
 	<div class="container">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="linayao@unsw.edu.au" />
+			<input type="hidden" name="_to" value="support@example.com" />
 			<input type="text" name="_gotcha" style="display: none;" />
 
 			<div class="halves">
@@ -27,7 +28,7 @@ map:
 			</div>
 
 			<label for="email">Email Address</label>
-			<input type="email" name="email" id="email" placeholder="linayao@unsw.edu.au" required />
+			<input type="email" name="email" id="email" placeholder="john@example.com" required />
 
 			<label for="message">Message</label>
 			<textarea name="message" id="message" placeholder="Hi There..."></textarea>
