--- a/calendar.html
+++ b/calendar.html
@@ -7,6 +7,87 @@ subtitle: Canlendar for Reading Group, Learning Group.
 <section class="diagonal">
 	<div class="container">
 
+<li style="font-size:30px">Key dates for Conference</li><br>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
+.tg .tg-peaf{font-size:24px}
+.tg .tg-24i8{font-size:24px;vertical-align:top}
+</style>
+<table class="tg" style="undefined;table-layout: fixed; width: 855px">
+<colgroup>
+<col style="width: 121px">
+<col style="width: 133px">
+<col style="width: 601px">
+</colgroup>
+  <tr>
+    <th class="tg-24i8">Conference</th>
+    <th class="tg-24i8">Rank</th>
+    <th class="tg-peaf">Deadline</th>
+  </tr>
+  <tr>
+    <td class="tg-24i8">KDD</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">17th, Feb.</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">Ubicomp</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">15th, Apr.</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">SIGIR</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">17th, Jan.</SPAN></td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">CIKM</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">9th, May.</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">RecSys</td>
+    <td class="tg-24i8">B</td>
+    <td class="tg-24i8">Abstract 27th, Mar; Full paper, 3rd, Apr.</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">ICDM</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">5th, Jun</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">WSDM</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">Aug</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">ECML</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8">13th, Apr; 20th, Apr.</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">ICML</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">SIGKDD </td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">PAKDD </td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">IJCAI</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">19th,Feb, 2017</td>
+  </tr>
+</table>
+<br><br>
 
 <li style="font-size:30px">Reading Group</li><br>
 <p>Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
