--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ map:
 		</div>
 		<div>
 			<h3>Email</h3>
-			<p><a href="mailto:{{ site.data.company.contact_email_address }}">{{ site.data.company.contact_email_address }}</a></p>
+			<p><a href="mailto:linayao@unsw.edu.au">linayao@unsw.edu.au</a></p>
 		</div>
 	</div>
 </section>
