--- a/opensource.html
+++ b/opensource.html
@@ -1,7 +1,7 @@
 ---
 title: Portfolio
-heading: Our Work
-subtitle: See some of our proud customers with exemplary results.
+heading: Open code and datasets
+subtitle: See some of our proud opensource project.
 ---
 
 <section class="diagonal patterned">
