--- a/publication.html
+++ b/publication.html
@@ -1,85 +1,34 @@
 ---
 title: Contact
-heading: Get in touch today
-subtitle: We'd love to help your business.
-map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
-  zoom: 13
+heading: Selective papers
+subtitle: The goal of education is the advancement of knowledge and the dissemination of truth. Find more on group members' homepage.
 ---
 
 <section class="diagonal">
 	<div class="container">
-		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="support@example.com" />
-			<input type="text" name="_gotcha" style="display: none;" />
-
-			<div class="halves">
-				<div>
-					<label for="name">First Name</label>
-					<input type="text" name="first-name" id="first-name" placeholder="John" />
-				</div>
-
-				<div>
-					<label for="name">Last Name</label>
-					<input type="text" name="last-name" id="last-name" placeholder="Doe" />
-				</div>
-			</div>
-
-			<label for="email">Email Address</label>
-			<input type="email" name="email" id="email" placeholder="john@example.com" required />
-
-			<label for="message">Message</label>
-			<textarea name="message" id="message" placeholder="Hi There..."></textarea>
-
-			<input type="submit" value="Send Message" />
-		</form>
-	</div>
-</section>
-
-<section class="diagonal map">
-	<div id="gmap_canvas"></div>
-</section>
-
-<section class="diagonal">
-	<div class="container halves aligned-top">
 		<div>
-			<h3>Address</h3>
-				<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
-		</div>
-		<div>
-			<h3>Email</h3>
-			<p><a href="mailto:{{ site.data.company.contact_email_address }}">{{ site.data.company.contact_email_address }}</a></p>
+			<h3 class="editable">Conference</h3>
+			<p class="editable">Lina Yao, Boualem Benatallah, Xianzhi Wang, Khoi Nguyen Tran and Qinghua Lu. Context as a Service: Realizing Internet of Things-Aware Processes for the Independent Living of the Elderly . The 14th International Conference on Service Oriented Computing ( ICSOC 2016), Banff, Alberta, Canada, October 10 -13, 2016</p>
+			<p class="editable">Lina Yao, Feiping Nie, Quan Z. Sheng, Tao Gu, Xue Li, Sen Wang, Learning from Less for Better: Semi-Supervised Activity Recognition via Shared Structure Discovery. The 2016 ACM International Joint Conference on Pervasive and Ubiquitous Computing ( UbiComp 2016). Heidelberg, Germany, September 12-16, 2016</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Xue Li, Sen Wang, Tao Gu, Wenjie Ruan and Wan Zou. Freedom: Online Activity Recognition via Dictionary-based Sparse Representation of RFID Sensing Data. The IEEE International Conference on Data Mining (ICDM 2015) , Atlantic City, NJ, USA, November 14 - 17, 2015</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Yongrui Qin, Xianzhi Wang, Ali Shemshadi and Qi He. Context-aware Point-of-Interest Recommendation Using Tensor Factorization with Social Regularization. The 38th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2015). Santiago, Chile, August 9 - 13, 2015</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Anne.H.H.Ngu, Helen Ashman and Xue Li. Exploring Recommendations in Internet of Things. The 37th Annual ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2014). Gold Coast, Australia, July 6-11, 2014</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Byron Gao, Anne.H.H.Ngu and Xue Li. A Model for Discovering Correlations of Ubiquitous Things. The IEEE International Conference on Data Mining (ICDM 2013). Dallas, Texas, USA, December 7-10, 2013</p>
+			<p class="editable">Lina Yao and Quan Z. Sheng. Correlation Discovery in Web of Things. The 22nd International World Wide Web Conference (WWW 2013). Rio, Brazil, May 13 - May 17, 2013</p>
+
+
+			<h3 class="editable">Journal</h3>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Anne. H. H. Ngu and Xue Li. Things of Interest Recommendation by Leveraging Heterogeneous Relations in Internet of Things. ACM Transactions on Internet Technology (TOIT), Vol 16, No 2, p9, 2016</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Anne. H. H. Ngu, Xue Li and Boualem Benatallah. Unveiling Correlations via Mining Human-Thing Interactions in the Web of Things. ACM Transactions on Intelligent Systems and Technology (TIST) 2016</p>
+			<p class="editable">Lina Yao, Quan Z. Sheng, Anne. H. H. Ngu, Byron Gao, Xue Li and Sen Wang. Multi-Label Classification via Learning a Unified Object-Label Graph with Sparse Representation. World Wide Web Journal (WWWJ)</p>
+			
+			
 		</div>
 	</div>
 </section>
 
-<script type="text/javascript">
-	window.mapData = {{ page.map | jsonify }};
 
-	function initMap() {
-		var myOptions = {
-			scrollwheel: false,
-			draggable: false,
-			panControl: false,
-			disableDefaultUI: true,
-			styles: [{"featureType":"landscape.man_made","elementType":"geometry","stylers":[{"color":"#f7f1df"}]},{"featureType":"landscape.natural","elementType":"geometry","stylers":[{"color":"#d0e3b4"}]},{"featureType":"landscape.natural.terrain","elementType":"geometry","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.medical","elementType":"geometry","stylers":[{"color":"#fbd3da"}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#bde6ab"}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffe15f"}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#efd151"}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"color":"#ffffff"}]},{"featureType":"road.local","elementType":"geometry.fill","stylers":[{"color":"black"}]},{"featureType":"transit.station.airport","elementType":"geometry.fill","stylers":[{"color":"#cfb2db"}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#a2daf2"}]}],
-			zoom: window.mapData.zoom,
-			maxZoom: window.mapData.zoom,
-			minZoom: window.mapData.zoom,
-			center: new google.maps.LatLng(window.mapData.latitude, window.mapData.longitude),
-			mapTypeId: google.maps.MapTypeId.ROADMAP
-		};
-		map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
-		marker = new google.maps.Marker({
-			map: map,
-			position: new google.maps.LatLng(window.mapData.latitude, window.mapData.longitude)
-		});
 
-		google.maps.event.addDomListener(window, "resize", function () {
-			map.setCenter(myOptions.center);
-		});
-	}
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
+
+
+
