--- a/index.html
+++ b/index.html
@@ -24,27 +24,65 @@ title: Urban
 	</div>
 </section>
 
-<!--
-<section class="diagonal alternate">
+
+<section class="" id="sectionpic">
+
 	<div class="container halves">
-		<div >
-			<ul class="image-list" width="700px" height="500px">
-				<li><img  id="imgs" src="{{ site.baseurl }}/images/members/all.jpg"  style="margin-bottom: 10px;"></li>
-			</ul>
-		</div>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<style>
+.mySlides {display:none;height:690px;width:950px}
+.w3-left, .w3-right, .w3-badge {cursor:pointer}
+.w3-badge {height:13px;width:13px;padding:0}
+
+</style>
+
+<div class="w3-content w3-display-container" >
+  <img class="mySlides side-crop" src="/images/members/all1.jpg" style="width:100%">
+  <img class="mySlides side-crop" src="/images/members/all2.jpg" style="width:100%">
+  <img class="mySlides side-crop" src="/images/members/all3.jpg" style="width:100%">
+  <img class="mySlides side-crop" src="/images/members/all4.jpg" style="width:100%">
+  <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+    <div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+  </div>
+</div>
 	</div>
 
 </section>
 
-<script language="javascript"> 
-setInterval(test,5000); 
-var array=new Array(); 
-var index=0; 
-var array= new Array("/images/members/all.jpg","/images/members/UNSW_Sydney.png"); 
-function test() 
-{ var myimg=document.getElementById("imgs"); 
-if(index==array.length-1) 
-{ index=0; }else{ index++; } 
-myimg.src=array[index]; 
-} 
-</script> -->
+
+
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+     dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
