--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Urban
 	<div class="container halves">
 		<div>
 			<h3 class="editable">Group News</h3>
-			<p class="editable">1. Contest participation: Manqing dong, chaoran huang, shuai zhang join the IJCAI 2017 Alibaba Tianchi Contest</p>
+			<p class="editable">1. Contest participation: Manqing dong, shuai zhang, chaoran huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
 			<p class="editable">2. Grant Awarded:Research Infrastructure Scheme, CI, UNSW, 2017</p>
 			<p class="editable">3. Grant Awarded:The National Natural Science Foundation of China (NSFC), International Partner Investigator, 2017 - 2019</p>
 		</div>
