--- a/publication.html
+++ b/publication.html
@@ -1,5 +1,5 @@
 ---
-title: Contact
+title: Publications
 heading: Selective papers
 subtitle: The goal of education is the advancement of knowledge and the dissemination of truth. Find more on group members' homepage.
 ---
