--- a/opensource.html
+++ b/opensource.html
@@ -1,5 +1,5 @@
 ---
-title: Portfolio
+title: Open Source
 heading: Open code and datasets
 subtitle: See some of our proud opensource project.
 ---
