--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Group Homepage
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">Lina Lab </h2>
+		<ul style="color:white">Group Leader: &nbsp <a href="http://linayao.com/">Lina Yao</a></ul>
 		<p class="subtext editable">Our group's research mainly involves: </p>
 		<ul style="color:white">Anomaly detection: &nbsp <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a> &nbsp <a href="https://githubningxiaodong.github.io/">Xiaodong Ning</a></ul>
 		<ul style="color:white">Recommendation system:&nbsp <a href="http://www.cse.unsw.edu.au/~z5122282/">Shuai Zhang</a>&nbsp <a href="http://www.cse.unsw.edu.au/~chaoranh/"> Chaoran Huang</a></ul>
