--- a/calendar.html
+++ b/calendar.html
@@ -1,7 +1,7 @@
 ---
 title: Calendar
 heading: Don't miss anything.
-subtitle: Canlendar for Reading Group, Learning Group.
+subtitle: Calendar for Reading Group, Learning Group.
 ---
 
 <section class="diagonal">
