--- a/calendar.html
+++ b/calendar.html
@@ -1,13 +1,13 @@
 ---
 title: Calendar
 heading: Don't miss anything.
-subtitle: Calendar for Reading Group, Learning Group.
+subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 ---
 
 <section class="diagonal">
 	<div class="container">
 
-<li style="font-size:30px">Key dates for Conference</li><br>
+<li style="font-size:30px">Key dates for Conferences</li><br>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
@@ -25,70 +25,111 @@ subtitle: Calendar for Reading Group, Learning Group.
     <th class="tg-24i8">Conference</th>
     <th class="tg-24i8">Rank</th>
     <th class="tg-peaf">Deadline</th>
+    <th class="tg-peaf">Link</th>
   </tr>
   <tr>
     <td class="tg-24i8">KDD</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">17th, Feb.</td>
+    <td class="tg-24i8">http://www.kdd.org/kdd2017/</td>
   </tr>
   <tr>
     <td class="tg-24i8">Ubicomp</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">15th, Apr.</td>
+    <td class="tg-24i8">http://ubicomp.org/ubicomp2017/</td>
   </tr>
   <tr>
     <td class="tg-24i8">SIGIR</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">17th, Jan.</SPAN></td>
+    <td class="tg-24i8">http://sigir.org/sigir2017/</td>
   </tr>
   <tr>
     <td class="tg-24i8">CIKM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">9th, May.</td>
+    <td class="tg-24i8">http://cikm2017.org/</td>
   </tr>
   <tr>
     <td class="tg-24i8">RecSys</td>
     <td class="tg-24i8">B</td>
     <td class="tg-24i8">Abstract 27th, Mar; Full paper, 3rd, Apr.</td>
+    <td class="tg-24i8">https://recsys.acm.org/recsys17/</td>
   </tr>
   <tr>
     <td class="tg-24i8">ICDM</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">5th, Jun</td>
+    <td class="tg-24i8">http://icdm2017.bigke.org/</td>
   </tr>
   <tr>
     <td class="tg-24i8">WSDM</td>
     <td class="tg-24i8">A*</td>
-    <td class="tg-24i8">Aug</td>
+    <td class="tg-24i8">Aug.</td>
+    <td class="tg-24i8">http://www.wsdm-conference.org/2017/</td>
   </tr>
   <tr>
     <td class="tg-24i8">ECML</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">13th, Apr; 20th, Apr.</td>
+    <td class="tg-24i8">http://ecmlpkdd2017.org/</td>
   </tr>
   <tr>
     <td class="tg-24i8">ICML</td>
     <td class="tg-24i8">A*</td>
-    <td class="tg-24i8"></td>
+    <td class="tg-24i8">Feb 24, 2017</td>
+    <td class="tg-24i8">https://2017.icml.cc/</td>
   </tr>
   <tr>
-    <td class="tg-24i8">SIGKDD </td>
-    <td class="tg-24i8">A*</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">PAKDD </td>
+    <td class="tg-24i8">SDM</td>
     <td class="tg-24i8">A</td>
-    <td class="tg-24i8"></td>
+    <td class="tg-24i8">Oct</td>
+    <td class="tg-24i8">http://www.siam.org/meetings/sdm17/</td>
+  </tr>
+  <tr>
+    <td class="tg-24i8">SIGGRAPH</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8">14 February</td>
+    <td class="tg-24i8">http://s2017.siggraph.org/</td>	  
   </tr>
   <tr>
     <td class="tg-24i8">IJCAI</td>
     <td class="tg-24i8">A*</td>
     <td class="tg-24i8">19th,Feb, 2017</td>
+    <td class="tg-24i8">http://ijcai-17.org/</td>	  
+  </tr>
+  <tr>
+    <td class="tg-24i8">NIPS</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8">https://nips.cc/Conferences/2017</td>	  
+  </tr>
+  <tr>
+    <td class="tg-24i8">WWW</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8">http://www.www2017.com.au/</td>	  
+  </tr>
+  <tr>
+    <td class="tg-24i8">AAAI</td>
+    <td class="tg-24i8">A*</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8">http://www.aaai.org/Conferences/AAAI/aaai17.php</td>	  
+  </tr>
+  <tr>
+    <td class="tg-24i8">ICONIP</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8">Jun 10</td>
+    <td class="tg-24i8">http://www.iconip2017.org/papers.html</td>	  
   </tr>
 </table>
+<br>
+		<p>For more information, please check:</p>
+		<ul><a href="http://www.wikicfp.com/cfp/">WIKICFP</a></ul>
+		<ul><a href="http://portal.core.edu.au/conf-ranks/">Core rank</a></ul>
 <br><br>
-
+		
 <li style="font-size:30px">Reading Group</li><br>
 <p>Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
 <p>Here are some rules that you need to follow:</p>
@@ -99,7 +140,7 @@ subtitle: Calendar for Reading Group, Learning Group.
 
 <p>Time&Place</p>
  
-<ul>Time: 4:00pm - 5:00pm Wednesday per fortnight</ul>
+<ul>Time: 3:00pm - 4:00pm Monday per fortnight</ul>
 
 <ul>Venue: K17, 401K</ul>
 
@@ -178,7 +219,11 @@ subtitle: Calendar for Reading Group, Learning Group.
 <br><br>
 <li style="font-size:30px">Learning Group</li><br>
 <p>Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
+<p>Time&Place</p>
+ 
+<ul>Time: 3:00pm - 4:00pm Monday per fortnight</ul>
 
+<ul>Venue: K17, 401K</ul>
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
