--- a/calendar.html
+++ b/calendar.html
@@ -10,23 +10,16 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
 <li style="font-size:30px">Key dates for Conferences</li><br>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
-.tg .tg-peaf{font-size:24px}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
 .tg .tg-24i8{font-size:24px;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: fixed; width: 1054px">
-<colgroup>
-<col style="width: 121px">
-<col style="width: 133px">
-<col style="width: 300px">
-<col style="width: 500px">
-</colgroup>
+<table class="tg">
   <tr>
     <th class="tg-24i8">Conference</th>
     <th class="tg-24i8">Rank</th>
-    <th class="tg-peaf">Deadline</th>
-    <th class="tg-peaf">Link</th>
+    <th class="tg-24i8">Deadline</th>
+    <th class="tg-24i8">Link</th>
   </tr>
   <tr>
     <td class="tg-24i8">KDD</td>
