--- a/calendar.html
+++ b/calendar.html
@@ -48,7 +48,7 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
   <tr>
     <td class="tg-24i8">RecSys</td>
     <td class="tg-24i8">B</td>
-    <td class="tg-24i8">Abstract 27th, Mar; Full paper, 3rd, Apr.</td>
+    <td class="tg-24i8">3rd, Apr.</td>
     <td class="tg-24i8">https://recsys.acm.org/recsys17/</td>
   </tr>
   <tr>
