--- a/calendar.html
+++ b/calendar.html
@@ -64,6 +64,12 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8">http://www.wsdm-conference.org/2017/</td>
   </tr>
   <tr>
+    <td class="tg-24i8">WISE</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8"></td>
+    <td class="tg-24i8">http://www.wise-conferences.org/</td>
+  </tr>
+  <tr>
     <td class="tg-24i8">ECML</td>
     <td class="tg-24i8">A</td>
     <td class="tg-24i8">13th, Apr; 20th, Apr.</td>
@@ -117,6 +123,19 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
     <td class="tg-24i8">Jun 10</td>
     <td class="tg-24i8">http://www.iconip2017.org/papers.html</td>	  
   </tr>
+  <tr>
+    <td class="tg-24i8">ICWS</td>
+    <td class="tg-24i8">A</td>
+	  <td class="tg-24i8"><SPAN style="TEXT-DECORATION: line-through">February 6</SPAN></td>
+    <td class="tg-24i8">http://icws.org/2017/</td>	  
+  </tr>
+  <tr>
+    <td class="tg-24i8">ICSOC</td>
+    <td class="tg-24i8">A</td>
+    <td class="tg-24i8">June 6</td>
+    <td class="tg-24i8">http://www.icsoc.spilab.es/</td>	  
+  </tr>	
+	
 </table>
 <br>
 		<p>For more information, please check:</p>
@@ -252,8 +271,8 @@ subtitle: Calendar for Top Conferences, Reading Group, Learning Group.
   </tr>
   <tr>
     <td class="tg-24i8">Xiaodong Ning</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
+    <td class="tg-24i8">2 Feb, 2017</td>
+    <td class="tg-24i8">hypergraph</td>
     <td class="tg-24i8"></td>
   </tr>
   <tr>
