--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-title: Group Homepage
+title: INSDATA
 ---
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">Lina Lab </h2>
+		<h2 class="editable">INSDATA</h2>
 		<ul style="color:white">Group Leader: &nbsp <a href="http://linayao.com/">Lina Yao</a></ul>
 		<p class="subtext editable">Our group's research mainly involves: </p>
 		<ul style="color:white">Anomaly detection: &nbsp <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a> &nbsp <a href="https://githubningxiaodong.github.io/">Xiaodong Ning</a></ul>
