--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: insData
 		<p class="subtext editable">Our group's research mainly involves: </p>
 		<ul style="color:white">Anomaly detection: &nbsp <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a> &nbsp <a href="https://githubningxiaodong.github.io/">Xiaodong Ning</a></ul>
 		<ul style="color:white">Recommendation system:&nbsp <a href="http://www.cse.unsw.edu.au/~z5122282/">Shuai Zhang</a>&nbsp <a href="http://www.cse.unsw.edu.au/~chaoranh/"> Chaoran Huang</a></ul>
-		<ul style="color:white">Activity recognition: &nbsp <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></ul>
+		<ul style="color:white">Activity recognition: &nbsp <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a>&nbsp <a href="https://au.linkedin.com/in/usama-salama-a5b36b2">Usama Salama</a></ul>
 	</div>
 </section>
 
