--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@ title: InsData
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">InsData</h2>
-		<ul style="color:white">Group Leader: &nbsp <a href="http://linayao.com/">Lina Yao</a></ul>
-		<p class="subtext editable">Our group's research mainly involves: </p>
-		<ul style="color:white">Anomaly detection: &nbsp <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a> &nbsp <a href="https://githubningxiaodong.github.io/">Xiaodong Ning</a></ul>
-		<ul style="color:white">Recommendation system:&nbsp <a href="http://www.cse.unsw.edu.au/~z5122282/">Shuai Zhang</a>&nbsp <a href="http://www.cse.unsw.edu.au/~chaoranh/"> Chaoran Huang</a></ul>
-		<ul style="color:white">Activity recognition: &nbsp <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a>&nbsp <a href="https://au.linkedin.com/in/usama-salama-a5b36b2">Usama Salama</a></ul>
+		<p>InsData is dedicated on getting inspriations from data via designing and developing sound and robust data management and analysis techniques and systems. We work on a wide spectrum of problems across the areas of data mining, machine learning and pervasive intelligence, especially those that arise in the application domains of recommender systems, human activity recognition and anomaly detection.</p>
 	</div>
 </section>
 
 <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
-			<h3 class="editable">Group News</h3>
-			<p class="editable">1. Contest participation: Manqing dong, shuai zhang, chaoran huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
-			<p class="editable">2. Grant Awarded:Research Infrastructure Scheme, CI, UNSW, 2017</p>
-			<p class="editable">3. Grant Awarded:The National Natural Science Foundation of China (NSFC), International Partner Investigator, 2017 - 2019</p>
+			<h3 class="editable">News</h3>
+			<p class="editable">Contest participation: Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
+			<p class="editable">Grant Awarded:Research Infrastructure Scheme, CI, UNSW, 2017</p>
+			<p class="editable">Grant Awarded:The National Natural Science Foundation of China (NSFC), International Partner Investigator, 2017 - 2019</p>
 		</div>
 
 	</div>
