Reduce font size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: InsData
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">InsData</h2>
-		<p>InsData is dedicated on getting inspriations from data via designing and developing sound and robust data management and analysis techniques and systems. We work on a wide spectrum of problems across the areas of data mining, machine learning and pervasive intelligence, especially those that arise in the application domains of recommender systems, human activity recognition and anomaly detection.</p>
+		<p style="font-size: 1.4rem;">InsData is dedicated on getting inspriations from data via designing and developing sound and robust data management and analysis techniques and systems. We work on a wide spectrum of problems across the areas of data mining, machine learning and pervasive intelligence, especially those that arise in the application domains of recommender systems, human activity recognition and anomaly detection.</p>
 	</div>
 </section>
 
