--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: InsData
 	<div class="container halves">
 		<div>
 			<h3 class="editable">News</h3>
-			<p class="editable">Contest participation: Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
+			<p class="editable">Manqing dong, Shuai Zhang, Chaoran Huang join the IJCAI 2017 Alibaba Tianchi Contest</p>
 		</div>
 
 	</div>
