fix w3-include-html with script import w3data.js

--- a/calendar.html
+++ b/calendar.html
@@ -4,6 +4,8 @@ heading: Don't miss anything.
 subtitle: Canlendar for Reading Group, Learning Group.
 ---
 
+
+<script src="http://www.w3schools.com/lib/w3data.js"></script>
 <section class="diagonal">
 	<div class="container">
 
