--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@ subtitle: Canlendar for Reading Group, Learning Group.
 ---
 
 
-<script src="/js/w3data.js"></script>
+<script src="js/w3data.js"></script>
 <section class="diagonal">
 	<div class="container">
 
