--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,14 @@ subtitle: Canlendar for Reading Group, Learning Group.
 ---
 
 
-<script src="../js/w3data.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script>
+    $(function(){
+        $("#calcDiv").load("https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html");
+    });
+</script>
+
+
 <section class="diagonal">
 	<div class="container">
 
@@ -18,7 +25,7 @@ subtitle: Canlendar for Reading Group, Learning Group.
 .tg .tg-24i8{font-size:24px;vertical-align:top}
 </style>
 
-<div w3-include-HTML="https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html"></div>
+<div id="calcDiv"></div>
 
 <li style="font-size:30px">Reading Group</li><br>
 <p>Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
