trial on outlook calendar source

--- a/calendar.html
+++ b/calendar.html
@@ -5,194 +5,209 @@ subtitle: Canlendar for Reading Group, Learning Group.
 ---
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script>
-    $(function(){
-        $("#calcDiv").load("https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html");
-    });
-</script>
-
-
 <section class="diagonal">
-	<div class="container">
+    <div class="container">
 
-<li style="font-size:30px">Key dates for Conference</li><br>
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
-.tg .tg-peaf{font-size:24px}
-.tg .tg-24i8{font-size:24px;vertical-align:top}
-</style>
+        <li style="font-size:30px">Key dates for Conference</li><br>
+        <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 9px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
+            .tg .tg-peaf{font-size:24px}
+            .tg .tg-24i8{font-size:24px;vertical-align:top}
+        </style>
+        <style unselectable="on">
+            #wrap {
+                width:90%;
+                height:90%;
+                padding:0;
+                position:relative;
+                left:0px;
+                top:0px;
+                overflow:hidden;
+            }
+            #frame {
+                width:90%;
+                height:90%;
+                position:relative;
+                left:0px;
+                top:0px;
+                border: 0px;
+            }
+            #frame {
+                -ms-zoom:0.7;
+            }
+        </style>
+        <div id="wrap" unselectable="on">
+            <iframe id="frame" src="https://outlook.live.com/owa//calendar/00000000-0000-0000-0000-000000000000/0edae97b-c666-4f04-900b-9c4207189518/cid-B9796FC8171B730C/index.html"></iframe>
+        </div>
 
-<div id="calcDiv"></div>
+        <li style="font-size:30px">Reading Group</li><br>
+        <p>Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
+        <p>Here are some rules that you need to follow:</p>
 
-<li style="font-size:30px">Reading Group</li><br>
-<p>Coordinator: <a href="http://1015xzhang.wixsite.com/mysite">Xiang Zhang</a></p>
-<p>Here are some rules that you need to follow:</p>
+        <ul>1) the reading group meetings will be held on Wednesday every two weeks;</ul>
 
-<ul>1) the reading group meetings will be held on Wednesday every two weeks;</ul>
+        <ul>2) selecting the best papers from the top conferences of your research interests. Please note that the paper MUST come from a CORE A* conference with less than 2 years old.</ul>
 
-<ul>2) selecting the best papers from the top conferences of your research interests. Please note that the paper MUST come from a CORE A* conference with less than 2 years old.</ul>
+        <p>Time&Place</p>
 
-<p>Time&Place</p>
- 
-<ul>Time: 4:00pm - 5:00pm Wednesday per fortnight</ul>
+        <ul>Time: 4:00pm - 5:00pm Wednesday per fortnight</ul>
 
-<ul>Venue: K17, 401K</ul>
+        <ul>Venue: K17, 401K</ul>
 
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
-.tg .tg-24i8{font-size:24px;vertical-align:top}
-</style>
-<table class="tg">
-  <tr>
-    <th class="tg-24i8">Name</th>
-    <th class="tg-24i8">Time</th>
-    <th class="tg-24i8">Title</th>
-    <th class="tg-24i8">Source</th>
-    <th class="tg-24i8">Memo</th>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xiang Zhang</td>
-    <td class="tg-24i8">22 Nov, 2016</td>
-    <td class="tg-24i8">Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features</td>
-    <td class="tg-24i8">SIGKDD 2016</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xiaodong Ning</td>
-    <td class="tg-24i8">11 Jan, 2017</td>
-    <td class="tg-24i8">Predicting Pre-click Quality for Native Advertisements</td>
-    <td class="tg-24i8">IW3C2</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Manqing Dong</td>
-    <td class="tg-24i8">25 Jan, 2017</td>
-    <td class="tg-24i8">Robust Unsupervised Feature Selection on Networked Data.</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Chaoran Huang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Shuai Zhang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xigang Yuan</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Guangyang Qi</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Usama Salama</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-</table>
+        <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
+            .tg .tg-24i8{font-size:24px;vertical-align:top}
+        </style>
+        <table class="tg">
+            <tr>
+                <th class="tg-24i8">Name</th>
+                <th class="tg-24i8">Time</th>
+                <th class="tg-24i8">Title</th>
+                <th class="tg-24i8">Source</th>
+                <th class="tg-24i8">Memo</th>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xiang Zhang</td>
+                <td class="tg-24i8">22 Nov, 2016</td>
+                <td class="tg-24i8">Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features</td>
+                <td class="tg-24i8">SIGKDD 2016</td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xiaodong Ning</td>
+                <td class="tg-24i8">11 Jan, 2017</td>
+                <td class="tg-24i8">Predicting Pre-click Quality for Native Advertisements</td>
+                <td class="tg-24i8">IW3C2</td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Manqing Dong</td>
+                <td class="tg-24i8">25 Jan, 2017</td>
+                <td class="tg-24i8">Robust Unsupervised Feature Selection on Networked Data.</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Chaoran Huang</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Shuai Zhang</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xigang Yuan</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Guangyang Qi</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Usama Salama</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+        </table>
 
-<br><br>
-<li style="font-size:30px">Learning Group</li><br>
-<p>Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
+        <br><br>
+        <li style="font-size:30px">Learning Group</li><br>
+        <p>Coordinator: <a href="http://www.cse.unsw.edu.au/~z5122290/">Manqing Dong</a></p>
 
 
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
-.tg .tg-24i8{font-size:24px;vertical-align:top}
-</style>
-<table class="tg">
-  <tr>
-    <th class="tg-24i8">Name</th>
-    <th class="tg-24i8">Time</th>
-    <th class="tg-24i8">Title</th>
-    <th class="tg-24i8">Memo</th>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Manqing Dong</td>
-    <td class="tg-24i8">30 Nov, 2016</td>
-    <td class="tg-24i8">A Brief Introduction to Time Series</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Chaoran Huang</td>
-    <td class="tg-24i8">11 Jan, 2017</td>
-    <td class="tg-24i8">Numpy, fundamental package for scientific computing with Python</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xigang Yuan</td>
-    <td class="tg-24i8">18 Jan, 2017</td>
-    <td class="tg-24i8">Game theory</td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xiaodong Ning</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Shuai Zhang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Guangyang Qi</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Xiang Zhang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Manqing Dong</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Chaoran Huang</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-  <tr>
-    <td class="tg-24i8">Usama Salama</td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-    <td class="tg-24i8"></td>
-  </tr>
-</table>
-	</div>
+        <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;border-color:#999;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#444;background-color:#F7FDFA;border-top-width:1px;border-bottom-width:1px;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#999;color:#fff;background-color:#26ADE4;border-top-width:1px;border-bottom-width:1px;}
+            .tg .tg-24i8{font-size:24px;vertical-align:top}
+        </style>
+        <table class="tg">
+            <tr>
+                <th class="tg-24i8">Name</th>
+                <th class="tg-24i8">Time</th>
+                <th class="tg-24i8">Title</th>
+                <th class="tg-24i8">Memo</th>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Manqing Dong</td>
+                <td class="tg-24i8">30 Nov, 2016</td>
+                <td class="tg-24i8">A Brief Introduction to Time Series</td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Chaoran Huang</td>
+                <td class="tg-24i8">11 Jan, 2017</td>
+                <td class="tg-24i8">Numpy, fundamental package for scientific computing with Python</td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xigang Yuan</td>
+                <td class="tg-24i8">18 Jan, 2017</td>
+                <td class="tg-24i8">Game theory</td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xiaodong Ning</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Shuai Zhang</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Guangyang Qi</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Xiang Zhang</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Manqing Dong</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Chaoran Huang</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+            <tr>
+                <td class="tg-24i8">Usama Salama</td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+                <td class="tg-24i8"></td>
+            </tr>
+        </table>
+    </div>
 </section>
 
 
